# ceres-lrmc

./: .gitignore  CMakeLists.txt  LRMC.sln  README.md
Ceres/: _everyheader.h  config.h  experiment.cpp  experiment.h  main.cpp  matrix.cpp  matrix.h  options.cpp  options.h  parser.cpp  parser.h  residuals_analytic.cpp  residuals_analytic.h  residuals_autodiff.cpp  residuals_autodiff.h
LRMC/: LRMC.vcxproj  je_all.h  je_config.h  je_experiment.cpp  je_experiment.h  je_matrix.cpp  je_matrix.h  je_options.cpp  je_options.h  je_parser.cpp  je_parser.h  je_residuals_analytic.cpp  je_residuals_analytic.h  je_residuals_autodiff.cpp  je_residuals_autodiff.h  main.cpp
